OrderController, NewOrder, lang, views, routes, order design templates
Made-with: Cursor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1177,89 +1177,89 @@
     "nav.shipping_calculator": "أسعار الشحن من أمريكا",
     "nav.testimonials": "آراء العملاء",
     "of": "من",
-    "opus46.add_product": "إضافة منتج آخر",
-    "opus46.attach": "إرفاق ملف",
-    "opus46.cleared": "تم مسح جميع الحقول بنجاح",
-    "opus46.confirm_order": "إرسال الطلب",
-    "opus46.cur_cny": "يوان صيني",
-    "opus46.cur_eur": "يورو",
-    "opus46.cur_gbp": "جنيه إسترليني",
-    "opus46.cur_jpy": "ين ياباني",
-    "opus46.cur_krw": "وون كوري",
-    "opus46.cur_other": "أخرى",
-    "opus46.cur_sar": "ريال سعودي",
-    "opus46.cur_try": "ليرة تركية",
-    "opus46.cur_usd": "دولار أمريكي",
-    "opus46.data_saved": "لا تقلق، جميع بيانات المنتجات التي أدخلتها محفوظة",
-    "opus46.file_attached": "تم إرفاق ملف. بعد الإرسال يمكنك إضافة المزيد من صفحة الطلب.",
-    "opus46.file_info": "ملف واحد كحد أقصى لكل منتج (صورة، PDF، Excel) - 2 ميجابايت",
-    "opus46.upload_failed": "فشل رفع الملف. يرجى المحاولة مرة أخرى.",
-    "opus46.file_too_large": "حجم الملف كبير جداً. الحد الأقصى ٢ ميجابايت لكل ملف",
-    "opus46.general_notes": "ملاحظات عامة",
-    "opus46.general_notes_ph": "يمكنك إضافة ملاحظات عامة للطلب، مثل طلب خدمة تصوير المنتجات، تغليف إضافي، أو دمجه مع طلب آخر الخ.",
-    "opus46.hide_optional": "− إخفاء الملاحظات والصور",
-    "opus46.invalid_type": "يرجى اختيار ملف مدعوم (صور، PDF، Excel)",
-    "opus46.item_minimized_prefix": "تم حفظ وتصغير المنتج رقم",
-    "opus46.item_minimized_suffix": "للأعلى",
-    "opus46.item_saved_collapsed_tip": "تم حفظ وتصغير المنتج السابق للأعلى لإتاحة الشاشة لإدخال بيانات أي منتج آخر إن وجد. عند الانتهاء من إدخال جميع المنتجات، أضف أي ملاحظات عامة إن وجدت ولا تنسى الضغط على زر إرسال الطلب.",
-    "opus46.lbl_color": "اللون",
-    "opus46.lbl_currency": "العملة",
-    "opus46.lbl_notes": "ملاحظات",
-    "opus46.lbl_price": "السعر",
-    "opus46.lbl_qty": "العدد",
-    "opus46.lbl_size": "المقاس",
-    "opus46.lbl_url": "رابط المنتج",
-    "opus46.login_to_upload": "لإرفاق الملفات يرجى تسجيل الدخول",
-    "opus46.max_files": "وصلت للحد الأقصى (١٠ ملفات). أرسل طلبك لتتمكن من إضافة المزيد.",
-    "opus46.max_limit_suffix": "منتج كحد أقصى في الطلب الواحد",
-    "opus46.max_products": "الحد الأقصى :max منتج في الطلب الواحد",
-    "opus46.modal_title": "تسجيل الدخول لإرسال الطلب",
-    "opus46.modal_title_attach": "تسجيل الدخول لإرفاق الملف",
-    "opus46.modal_subtitle_attach": "لن تفقد أي بيانات أدخلتها. سجّل الدخول لإرفاق الملف. إذا لم يكن لديك حساب، سننشئ واحداً باستخدام بريدك الإلكتروني.",
-    "opus46.modal_email_hint": "أدخل بريدك الإلكتروني أدناه — إذا لم يكن لديك حساب، سننشئ واحداً لك.",
-    "opus46.modal_enter_email": "أدخل بريدك الإلكتروني",
-    "opus46.no_account": "لا يوجد حساب بهذا الايميل",
-    "opus46.optional": "اختياري",
-    "opus46.password_create_hint": "أدخل كلمة مرور لإنشاء حساب لك.",
-    "opus46.show_password": "إظهار",
-    "opus46.hide_password": "إخفاء",
-    "opus46.notes_placeholder": "مثلاً: إذا لم يتوفر اللون الأزرق اختر الأخضر",
-    "opus46.one_file": "يمكنك إرفاق ملف واحد فقط لكل منتج حالياً.",
-    "opus46.other_currency_note": "بما أن هذه العملة غير متاحة، يمكنك إضافة المنتج وسنتولى حساب التكلفة يدويًا.",
-    "opus46.product": "المنتج",
-    "opus46.product_num": "المنتج رقم:",
-    "opus46.products_count": "عدد المنتجات",
-    "opus46.products_value": "قيمة المنتجات",
-    "opus46.remove": "حذف",
-    "opus46.reset_all": "مسح جميع المنتجات المدخلة",
-    "opus46.reset_confirm": "سيتم مسح كامل البيانات التي أدخلتها. هل ترغب بالاستمرار بالمسح؟",
-    "opus46.reset_desc": "لاستعادة كلمة المرور، يرجى زيارة صفحة تسجيل الدخول الرئيسية.",
-    "opus46.show_edit": "إظهار أو تعديل",
-    "opus46.show_optional": "+ إضافة ملاحظات أو صورة للمنتج",
-    "opus46.submit_success": "تم استلام الطلب بنجاح! (هذه صفحة اختبار — لا يتم حفظ البيانات)",
-    "opus46.submitting": "جارٍ الإرسال",
-    "opus46.test_banner": "هذه صفحة اختبار UI/UX — لن يتم حفظ أي بيانات في قاعدة البيانات.",
-    "opus46.th_color": "اللون",
-    "opus46.th_currency": "العملة",
-    "opus46.th_files": "المرفقات",
-    "opus46.th_notes": "ملاحظات",
-    "opus46.th_num": "الرقم",
-    "opus46.th_price": "السعر",
-    "opus46.th_qty": "العدد",
-    "opus46.th_size": "المقاس",
-    "opus46.th_url": "رابط المنتج",
-    "opus46.tip_1": "١) جميع الحقول اختيارية، لكن إدخال بيانات كاملة مثل اللون والمقاس يسرّع معالجة طلبك.",
-    "opus46.tip_2": "٢) كلما كانت المواصفات أوضح، تم شراء المنتجات بدقة وشحن طلبك أسرع.",
-    "opus46.tip_3": "٣) عند إدخال السعر بأي عملة، يحسب النظام قيمة المنتجات بالريال تلقائيًا.",
-    "opus46.tip_4": "٤) بعد الضغط على «إرسال الطلب» ستنتقل إلى صفحة الطلب لمتابعة حالة طلبك.",
-    "opus46.tip_5": "٥) إرفاق صور اختياري. ملف واحد فقط لكل منتج وبحد أقصى ١٠ ملفات للطلب.",
-    "opus46.tip_6": "٦) لا تنسَ الضغط على زر إرسال أسفل الصفحة ليتم حفظ الطلب.",
-    "opus46.tip_7": "٧) لمسح جميع البيانات والبدء من جديد، اضغط على رابط مسح أسفل الصفحة.",
-    "opus46.tips_dont_show": "عدم إظهار هذه النصائح مرة أخرى",
-    "opus46.tips_hidden": "لن يتم إظهار النصائح لمدة 30 يوم",
-    "opus46.tips_title": "نصائح سريعة قبل الطلب",
-    "opus46.url_placeholder": "الصق رابط المنتج (أو وصفه إن لم يوجد رابط)",
-    "opus46.welcome_back": "أهلاً بعودتك! أدخل كلمة المرور",
+    "order_form.add_product": "إضافة منتج آخر",
+    "order_form.attach": "إرفاق ملف",
+    "order_form.cleared": "تم مسح جميع الحقول بنجاح",
+    "order_form.confirm_order": "إرسال الطلب",
+    "order_form.cur_cny": "يوان صيني",
+    "order_form.cur_eur": "يورو",
+    "order_form.cur_gbp": "جنيه إسترليني",
+    "order_form.cur_jpy": "ين ياباني",
+    "order_form.cur_krw": "وون كوري",
+    "order_form.cur_other": "أخرى",
+    "order_form.cur_sar": "ريال سعودي",
+    "order_form.cur_try": "ليرة تركية",
+    "order_form.cur_usd": "دولار أمريكي",
+    "order_form.data_saved": "لا تقلق، جميع بيانات المنتجات التي أدخلتها محفوظة",
+    "order_form.file_attached": "تم إرفاق ملف. بعد الإرسال يمكنك إضافة المزيد من صفحة الطلب.",
+    "order_form.file_info": "ملف واحد كحد أقصى لكل منتج (صورة، PDF، Excel) - 2 ميجابايت",
+    "order_form.upload_failed": "فشل رفع الملف. يرجى المحاولة مرة أخرى.",
+    "order_form.file_too_large": "حجم الملف كبير جداً. الحد الأقصى ٢ ميجابايت لكل ملف",
+    "order_form.general_notes": "ملاحظات عامة",
+    "order_form.general_notes_ph": "يمكنك إضافة ملاحظات عامة للطلب، مثل طلب خدمة تصوير المنتجات، تغليف إضافي، أو دمجه مع طلب آخر الخ.",
+    "order_form.hide_optional": "− إخفاء الملاحظات والصور",
+    "order_form.invalid_type": "يرجى اختيار ملف مدعوم (صور، PDF، Excel)",
+    "order_form.item_minimized_prefix": "تم حفظ وتصغير المنتج رقم",
+    "order_form.item_minimized_suffix": "للأعلى",
+    "order_form.item_saved_collapsed_tip": "تم حفظ وتصغير المنتج السابق للأعلى لإتاحة الشاشة لإدخال بيانات أي منتج آخر إن وجد. عند الانتهاء من إدخال جميع المنتجات، أضف أي ملاحظات عامة إن وجدت ولا تنسى الضغط على زر إرسال الطلب.",
+    "order_form.lbl_color": "اللون",
+    "order_form.lbl_currency": "العملة",
+    "order_form.lbl_notes": "ملاحظات",
+    "order_form.lbl_price": "السعر",
+    "order_form.lbl_qty": "العدد",
+    "order_form.lbl_size": "المقاس",
+    "order_form.lbl_url": "رابط المنتج",
+    "order_form.login_to_upload": "لإرفاق الملفات يرجى تسجيل الدخول",
+    "order_form.max_files": "وصلت للحد الأقصى (١٠ ملفات). أرسل طلبك لتتمكن من إضافة المزيد.",
+    "order_form.max_limit_suffix": "منتج كحد أقصى في الطلب الواحد",
+    "order_form.max_products": "الحد الأقصى :max منتج في الطلب الواحد",
+    "order_form.modal_title": "تسجيل الدخول لإرسال الطلب",
+    "order_form.modal_title_attach": "تسجيل الدخول لإرفاق الملف",
+    "order_form.modal_subtitle_attach": "لن تفقد أي بيانات أدخلتها. سجّل الدخول لإرفاق الملف. إذا لم يكن لديك حساب، سننشئ واحداً باستخدام بريدك الإلكتروني.",
+    "order_form.modal_email_hint": "أدخل بريدك الإلكتروني أدناه — إذا لم يكن لديك حساب، سننشئ واحداً لك.",
+    "order_form.modal_enter_email": "أدخل بريدك الإلكتروني",
+    "order_form.no_account": "لا يوجد حساب بهذا الايميل",
+    "order_form.optional": "اختياري",
+    "order_form.password_create_hint": "أدخل كلمة مرور لإنشاء حساب لك.",
+    "order_form.show_password": "إظهار",
+    "order_form.hide_password": "إخفاء",
+    "order_form.notes_placeholder": "مثلاً: إذا لم يتوفر اللون الأزرق اختر الأخضر",
+    "order_form.one_file": "يمكنك إرفاق ملف واحد فقط لكل منتج حالياً.",
+    "order_form.other_currency_note": "بما أن هذه العملة غير متاحة، يمكنك إضافة المنتج وسنتولى حساب التكلفة يدويًا.",
+    "order_form.product": "المنتج",
+    "order_form.product_num": "المنتج رقم:",
+    "order_form.products_count": "عدد المنتجات",
+    "order_form.products_value": "قيمة المنتجات",
+    "order_form.remove": "حذف",
+    "order_form.reset_all": "مسح جميع المنتجات المدخلة",
+    "order_form.reset_confirm": "سيتم مسح كامل البيانات التي أدخلتها. هل ترغب بالاستمرار بالمسح؟",
+    "order_form.reset_desc": "لاستعادة كلمة المرور، يرجى زيارة صفحة تسجيل الدخول الرئيسية.",
+    "order_form.show_edit": "إظهار أو تعديل",
+    "order_form.show_optional": "+ إضافة ملاحظات أو صورة للمنتج",
+    "order_form.submit_success": "تم استلام الطلب بنجاح! (هذه صفحة اختبار — لا يتم حفظ البيانات)",
+    "order_form.submitting": "جارٍ الإرسال",
+    "order_form.test_banner": "هذه صفحة اختبار UI/UX — لن يتم حفظ أي بيانات في قاعدة البيانات.",
+    "order_form.th_color": "اللون",
+    "order_form.th_currency": "العملة",
+    "order_form.th_files": "المرفقات",
+    "order_form.th_notes": "ملاحظات",
+    "order_form.th_num": "الرقم",
+    "order_form.th_price": "السعر",
+    "order_form.th_qty": "العدد",
+    "order_form.th_size": "المقاس",
+    "order_form.th_url": "رابط المنتج",
+    "order_form.tip_1": "١) جميع الحقول اختيارية، لكن إدخال بيانات كاملة مثل اللون والمقاس يسرّع معالجة طلبك.",
+    "order_form.tip_2": "٢) كلما كانت المواصفات أوضح، تم شراء المنتجات بدقة وشحن طلبك أسرع.",
+    "order_form.tip_3": "٣) عند إدخال السعر بأي عملة، يحسب النظام قيمة المنتجات بالريال تلقائيًا.",
+    "order_form.tip_4": "٤) بعد الضغط على «إرسال الطلب» ستنتقل إلى صفحة الطلب لمتابعة حالة طلبك.",
+    "order_form.tip_5": "٥) إرفاق صور اختياري. ملف واحد فقط لكل منتج وبحد أقصى ١٠ ملفات للطلب.",
+    "order_form.tip_6": "٦) لا تنسَ الضغط على زر إرسال أسفل الصفحة ليتم حفظ الطلب.",
+    "order_form.tip_7": "٧) لمسح جميع البيانات والبدء من جديد، اضغط على رابط مسح أسفل الصفحة.",
+    "order_form.tips_dont_show": "عدم إظهار هذه النصائح مرة أخرى",
+    "order_form.tips_hidden": "لن يتم إظهار النصائح لمدة 30 يوم",
+    "order_form.tips_title": "نصائح سريعة قبل الطلب",
+    "order_form.url_placeholder": "الصق رابط المنتج (أو وصفه إن لم يوجد رابط)",
+    "order_form.welcome_back": "أهلاً بعودتك! أدخل كلمة المرور",
     "or": "أو",
     "order(s)": "طلب",
     "order.add_at_least_one_product": "يجب إضافة منتج واحد على الأقل.",
@@ -1412,6 +1412,30 @@
     "orders.files_uploaded": "تم رفع :count ملف",
     "orders.files": "الملفات",
     "orders.filters": "الفلاتر",
+    "orders.all_orders": "جميع الطلبات",
+    "orders.filter_clear": "مسح الفلاتر",
+    "orders.filter_hide": "▲ إخفاء",
+    "orders.filter_show": "▼ فلتر",
+    "orders.search_placeholder": "رقم الطلب...",
+    "orders.sort_newest": "الأحدث أولاً",
+    "orders.sort_oldest": "الأقدم أولاً",
+    "orders.filter_apply": "تطبيق",
+    "orders.filter_reset": "إعادة تعيين",
+    "orders.no_orders_found": "لم يتم العثور على طلبات",
+    "orders.no_orders_yet": "لا توجد طلبات بعد",
+    "orders.no_orders_match_filters": "لا توجد طلبات تطابق الفلاتر. جرّب معايير مختلفة.",
+    "orders.orders_appear_here": "ستظهر طلباتك هنا بمجرد تقديم طلب.",
+    "orders.place_first_order": "قدّم طلبك الأول",
+    "orders.col_number": "رقم الطلب",
+    "orders.col_date": "تاريخ الطلب",
+    "orders.col_status": "الحالة",
+    "orders.col_actions": "فتح الطلب",
+    "orders.action_open": "فتح الطلب",
+    "orders.search_label": "بحث",
+    "orders.status_label": "الحالة",
+    "orders.all_statuses": "جميع الحالات",
+    "orders.sort_label": "ترتيب",
+    "orders.per_page_label": "لكل صفحة",
     "orders.final": "النهائي",
     "orders.final_price": "السعر النهائي",
     "orders.from_date": "من تاريخ",
@@ -1498,7 +1522,7 @@
     "orders.item": "المنتج",
     "orders.items": "منتجات الطلب",
     "orders.items_count": ":count منتج",
-    "orders.last_order_label": "الطلب الأخير",
+    "orders.last_order_label": "فتح الطلب الأخير",
     "orders.mark_paid": "تعيين كمدفوع",
     "orders.mark_shipped": "تعيين كمشحون",
     "orders.marked_as_paid": "تم تعيين الطلب كمدفوع",
@@ -1832,12 +1856,12 @@
     "account.orders_active": "طلبات نشطة",
     "account.orders_shipped": "تم الشحن",
     "account.orders_cancelled": "ملغاة",
-    "account.quick_new_order": "طلب جديد",
+    "account.quick_new_order": "إضافة طلب جديد",
     "account.quick_my_orders": "طلباتي",
     "account.quick_actions_title": "إجراءات سريعة",
     "account.order_stats_title": "إحصائيات الطلبات",
-    "opus46.reset_link_sent": "تم إرسال رابط إعادة التعيين. تحقق من بريدك الإلكتروني.",
-    "opus46.reset_send_link": "إرسال رابط إعادة التعيين",
+    "order_form.reset_link_sent": "تم إرسال رابط إعادة التعيين. تحقق من بريدك الإلكتروني.",
+    "order_form.reset_send_link": "إرسال رابط إعادة التعيين",
     "orders.whatsapp_comment_message": "مرحباً، بخصوص طلبك رقم :order:\n\n:body",
     "orders.whatsapp_no_phone": "لا يوجد رقم هاتف مسجل للعميل",
     "orders.whatsapp_send_logged": "تم تسجيل الإرسال عبر واتساب",
