--- a/lang/en.json
+++ b/lang/en.json
@@ -1177,89 +1177,89 @@
     "nav.shipping_calculator": "Shipping Rates from USA",
     "nav.testimonials": "Testimonials",
     "of": "of",
-    "opus46.add_product": "Add Another Product",
-    "opus46.attach": "Attach File",
-    "opus46.cleared": "All fields cleared successfully",
-    "opus46.confirm_order": "Submit Order",
-    "opus46.cur_cny": "Chinese Yuan",
-    "opus46.cur_eur": "Euro",
-    "opus46.cur_gbp": "British Pound",
-    "opus46.cur_jpy": "Japanese Yen",
-    "opus46.cur_krw": "Korean Won",
-    "opus46.cur_other": "Other",
-    "opus46.cur_sar": "Saudi Riyal",
-    "opus46.cur_try": "Turkish Lira",
-    "opus46.cur_usd": "US Dollar",
-    "opus46.data_saved": "Don't worry, all product data you entered is saved",
-    "opus46.file_attached": "File attached. After submission you can add more from the order page.",
-    "opus46.file_info": "Max one file per product (image, PDF, Excel) - 2 MB per file",
-    "opus46.upload_failed": "File upload failed. Please try again.",
-    "opus46.file_too_large": "File too large. Maximum 2 MB per file",
-    "opus46.general_notes": "General Notes",
-    "opus46.general_notes_ph": "Add general notes for the order, such as photography service, extra packaging, merging with another order, etc.",
-    "opus46.hide_optional": "− Hide notes and images",
-    "opus46.invalid_type": "Please select a supported file (images, PDF, Excel)",
-    "opus46.item_minimized_prefix": "Product",
-    "opus46.item_minimized_suffix": "saved and minimized",
-    "opus46.item_saved_collapsed_tip": "The previous product has been saved and minimized above to free the screen for entering any other product(s). When you finish entering all products, add any general notes if needed and don't forget to click the Submit Order button.",
-    "opus46.lbl_color": "Color",
-    "opus46.lbl_currency": "Currency",
-    "opus46.lbl_notes": "Notes",
-    "opus46.lbl_price": "Price",
-    "opus46.lbl_qty": "Qty",
-    "opus46.lbl_size": "Size",
-    "opus46.lbl_url": "Product URL",
-    "opus46.login_to_upload": "Please log in to attach files",
-    "opus46.max_files": "Max 10 files reached. Submit your order to add more from the order page.",
-    "opus46.max_limit_suffix": "products max per order",
-    "opus46.max_products": "Maximum :max products per order",
-    "opus46.modal_title": "Log in to Submit Order",
-    "opus46.modal_title_attach": "Sign in to attach file",
-    "opus46.modal_subtitle_attach": "You will not lose any data you entered. Sign in to attach a file. If you don't have an account, we'll create one using your email.",
-    "opus46.modal_email_hint": "Enter your email below — if you don't have an account, we'll create one for you.",
-    "opus46.modal_enter_email": "Enter your email",
-    "opus46.no_account": "No account with this email",
-    "opus46.optional": "optional",
-    "opus46.password_create_hint": "Enter a password to create your account.",
-    "opus46.show_password": "Show",
-    "opus46.hide_password": "Hide",
-    "opus46.notes_placeholder": "e.g. if blue is unavailable, choose green",
-    "opus46.one_file": "You can only attach one file per product.",
-    "opus46.other_currency_note": "This currency is not in the list. Add the product and we will calculate the cost manually.",
-    "opus46.product": "Product",
-    "opus46.product_num": "Product No.:",
-    "opus46.products_count": "Products",
-    "opus46.products_value": "Products Value",
-    "opus46.remove": "Remove",
-    "opus46.reset_all": "Clear All Entered Products",
-    "opus46.reset_confirm": "This will clear all entered data. Do you want to continue?",
-    "opus46.reset_desc": "To reset your password, please visit the main login page.",
-    "opus46.show_edit": "Show or Edit",
-    "opus46.show_optional": "+ Add notes or image for product",
-    "opus46.submit_success": "Order received successfully! (This is a test page — no data saved)",
-    "opus46.submitting": "Submitting",
-    "opus46.test_banner": "This is a UI/UX test page — no data will be saved to the database.",
-    "opus46.th_color": "Color",
-    "opus46.th_currency": "Currency",
-    "opus46.th_files": "Files",
-    "opus46.th_notes": "Notes",
-    "opus46.th_num": "No.",
-    "opus46.th_price": "Price",
-    "opus46.th_qty": "Qty",
-    "opus46.th_size": "Size",
-    "opus46.th_url": "Product URL",
-    "opus46.tip_1": "1) All fields are optional, but complete details like color and size speed up processing.",
-    "opus46.tip_2": "2) The clearer your specs, the faster and more accurate the purchase and shipping.",
-    "opus46.tip_3": "3) When you enter a price in any currency, the system auto-calculates value in SAR.",
-    "opus46.tip_4": "4) After clicking Submit you will be redirected to the order page to track your order.",
-    "opus46.tip_5": "5) Attaching files is optional. One file per product, max 10 files per order.",
-    "opus46.tip_6": "6) Don't forget to click the Submit button at the bottom to save the order.",
-    "opus46.tip_7": "7) To clear all data and start over, click the Clear link at the bottom.",
-    "opus46.tips_dont_show": "Don't show these tips again",
-    "opus46.tips_hidden": "Tips hidden for 30 days",
-    "opus46.tips_title": "Quick Tips Before Ordering",
-    "opus46.url_placeholder": "Paste product link (or describe it if no link)",
-    "opus46.welcome_back": "Welcome back! Enter your password",
+    "order_form.add_product": "Add Another Product",
+    "order_form.attach": "Attach File",
+    "order_form.cleared": "All fields cleared successfully",
+    "order_form.confirm_order": "Submit Order",
+    "order_form.cur_cny": "Chinese Yuan",
+    "order_form.cur_eur": "Euro",
+    "order_form.cur_gbp": "British Pound",
+    "order_form.cur_jpy": "Japanese Yen",
+    "order_form.cur_krw": "Korean Won",
+    "order_form.cur_other": "Other",
+    "order_form.cur_sar": "Saudi Riyal",
+    "order_form.cur_try": "Turkish Lira",
+    "order_form.cur_usd": "US Dollar",
+    "order_form.data_saved": "Don't worry, all product data you entered is saved",
+    "order_form.file_attached": "File attached. After submission you can add more from the order page.",
+    "order_form.file_info": "Max one file per product (image, PDF, Excel) - 2 MB per file",
+    "order_form.upload_failed": "File upload failed. Please try again.",
+    "order_form.file_too_large": "File too large. Maximum 2 MB per file",
+    "order_form.general_notes": "General Notes",
+    "order_form.general_notes_ph": "Add general notes for the order, such as photography service, extra packaging, merging with another order, etc.",
+    "order_form.hide_optional": "− Hide notes and images",
+    "order_form.invalid_type": "Please select a supported file (images, PDF, Excel)",
+    "order_form.item_minimized_prefix": "Product",
+    "order_form.item_minimized_suffix": "saved and minimized",
+    "order_form.item_saved_collapsed_tip": "The previous product has been saved and minimized above to free the screen for entering any other product(s). When you finish entering all products, add any general notes if needed and don't forget to click the Submit Order button.",
+    "order_form.lbl_color": "Color",
+    "order_form.lbl_currency": "Currency",
+    "order_form.lbl_notes": "Notes",
+    "order_form.lbl_price": "Price",
+    "order_form.lbl_qty": "Qty",
+    "order_form.lbl_size": "Size",
+    "order_form.lbl_url": "Product URL",
+    "order_form.login_to_upload": "Please log in to attach files",
+    "order_form.max_files": "Max 10 files reached. Submit your order to add more from the order page.",
+    "order_form.max_limit_suffix": "products max per order",
+    "order_form.max_products": "Maximum :max products per order",
+    "order_form.modal_title": "Log in to Submit Order",
+    "order_form.modal_title_attach": "Sign in to attach file",
+    "order_form.modal_subtitle_attach": "You will not lose any data you entered. Sign in to attach a file. If you don't have an account, we'll create one using your email.",
+    "order_form.modal_email_hint": "Enter your email below — if you don't have an account, we'll create one for you.",
+    "order_form.modal_enter_email": "Enter your email",
+    "order_form.no_account": "No account with this email",
+    "order_form.optional": "optional",
+    "order_form.password_create_hint": "Enter a password to create your account.",
+    "order_form.show_password": "Show",
+    "order_form.hide_password": "Hide",
+    "order_form.notes_placeholder": "e.g. if blue is unavailable, choose green",
+    "order_form.one_file": "You can only attach one file per product.",
+    "order_form.other_currency_note": "This currency is not in the list. Add the product and we will calculate the cost manually.",
+    "order_form.product": "Product",
+    "order_form.product_num": "Product No.:",
+    "order_form.products_count": "Products",
+    "order_form.products_value": "Products Value",
+    "order_form.remove": "Remove",
+    "order_form.reset_all": "Clear All Entered Products",
+    "order_form.reset_confirm": "This will clear all entered data. Do you want to continue?",
+    "order_form.reset_desc": "To reset your password, please visit the main login page.",
+    "order_form.show_edit": "Show or Edit",
+    "order_form.show_optional": "+ Add notes or image for product",
+    "order_form.submit_success": "Order received successfully! (This is a test page — no data saved)",
+    "order_form.submitting": "Submitting",
+    "order_form.test_banner": "This is a UI/UX test page — no data will be saved to the database.",
+    "order_form.th_color": "Color",
+    "order_form.th_currency": "Currency",
+    "order_form.th_files": "Files",
+    "order_form.th_notes": "Notes",
+    "order_form.th_num": "No.",
+    "order_form.th_price": "Price",
+    "order_form.th_qty": "Qty",
+    "order_form.th_size": "Size",
+    "order_form.th_url": "Product URL",
+    "order_form.tip_1": "1) All fields are optional, but complete details like color and size speed up processing.",
+    "order_form.tip_2": "2) The clearer your specs, the faster and more accurate the purchase and shipping.",
+    "order_form.tip_3": "3) When you enter a price in any currency, the system auto-calculates value in SAR.",
+    "order_form.tip_4": "4) After clicking Submit you will be redirected to the order page to track your order.",
+    "order_form.tip_5": "5) Attaching files is optional. One file per product, max 10 files per order.",
+    "order_form.tip_6": "6) Don't forget to click the Submit button at the bottom to save the order.",
+    "order_form.tip_7": "7) To clear all data and start over, click the Clear link at the bottom.",
+    "order_form.tips_dont_show": "Don't show these tips again",
+    "order_form.tips_hidden": "Tips hidden for 30 days",
+    "order_form.tips_title": "Quick Tips Before Ordering",
+    "order_form.url_placeholder": "Paste product link (or describe it if no link)",
+    "order_form.welcome_back": "Welcome back! Enter your password",
     "or": "or",
     "order(s)": "order(s)",
     "order.add_at_least_one_product": "Please add at least one product.",
@@ -1412,6 +1412,30 @@
     "orders.files_uploaded": ":count files uploaded",
     "orders.files": "Files",
     "orders.filters": "Filters",
+    "orders.all_orders": "All Orders",
+    "orders.filter_clear": "Clear filters",
+    "orders.filter_hide": "▲ Hide",
+    "orders.filter_show": "▼ Filter",
+    "orders.search_placeholder": "Order number...",
+    "orders.sort_newest": "Newest first",
+    "orders.sort_oldest": "Oldest first",
+    "orders.filter_apply": "Apply",
+    "orders.filter_reset": "Reset",
+    "orders.no_orders_found": "No orders found",
+    "orders.no_orders_yet": "No orders yet",
+    "orders.no_orders_match_filters": "No orders match your filters. Try different criteria.",
+    "orders.orders_appear_here": "Your orders will appear here once you place one.",
+    "orders.place_first_order": "Place your first order",
+    "orders.col_number": "Order #",
+    "orders.col_date": "Date",
+    "orders.col_status": "Status",
+    "orders.col_actions": "Actions",
+    "orders.action_open": "Open",
+    "orders.search_label": "Search",
+    "orders.status_label": "Status",
+    "orders.all_statuses": "All Statuses",
+    "orders.sort_label": "Sort",
+    "orders.per_page_label": "Per page",
     "orders.final": "Final",
     "orders.final_price": "Final Price",
     "orders.from_date": "From Date",
@@ -1498,7 +1522,7 @@
     "orders.item": "Item",
     "orders.items": "Order Items",
     "orders.items_count": ":count item(s)",
-    "orders.last_order_label": "Last order",
+    "orders.last_order_label": "Open last order",
     "orders.mark_paid": "Mark Paid",
     "orders.mark_shipped": "Mark Shipped",
     "orders.marked_as_paid": "Order marked as paid",
@@ -1836,12 +1860,12 @@
     "account.orders_active": "Active",
     "account.orders_shipped": "Shipped",
     "account.orders_cancelled": "Cancelled",
-    "account.quick_new_order": "New order",
+    "account.quick_new_order": "Add a new order",
     "account.quick_my_orders": "My Orders",
     "account.quick_actions_title": "Quick Actions",
     "account.order_stats_title": "Order Stats",
-    "opus46.reset_link_sent": "Reset link sent. Check your inbox.",
-    "opus46.reset_send_link": "Send Reset Link",
+    "order_form.reset_link_sent": "Reset link sent. Check your inbox.",
+    "order_form.reset_send_link": "Send Reset Link",
     "orders.whatsapp_comment_message": "Hello, regarding your order #:order:\n\n:body",
     "orders.whatsapp_no_phone": "No phone number on file for this customer",
     "orders.whatsapp_send_logged": "WhatsApp send recorded",
